# wallet_project

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  build_err.txt  docker-compose.yml  init_db.sh  lcov.info
.agent/rules/: code-explanation.md  rust-wallet-project.md
.agent/workflows/: coverage.md  feature.md
.documents/: audit_service_design.md
common/: Cargo.toml
common/src/: lib.rs
transaction_service/: .env  Cargo.toml  Dockerfile  build.rs
transaction_service/migrations/: 20240101000000_init.sql
transaction_service/src/: lib.rs  main.rs
transaction_service/src/api/: error.rs  http_routes.rs  mod.rs  proto.rs  response.rs
transaction_service/src/domain/: entities.rs  error.rs  gateways.rs  mod.rs  repository.rs  types.rs
transaction_service/src/infrastructure/: mod.rs
transaction_service/src/infrastructure/gateways/: fake_wallet_gateway.rs  grpc_wallet_gateway.rs  mod.rs
transaction_service/src/infrastructure/persistence/: mod.rs  models.rs  transaction_repository.rs
transaction_service/src/jobs/: retry.rs
transaction_service/src/use_cases/: get_transaction_details.rs  get_wallet_history.rs  mod.rs  process_transaction.rs
transaction_service/tests/: transfer_integration_test.rs
wallet_service/: .env  Cargo.toml  Dockerfile  build.rs
wallet_service/migrations/: 20240101000000_init.sql
wallet_service/proto/: wallet.proto
wallet_service/src/: lib.rs  main.rs
wallet_service/src/api/: error.rs  grpc_service.rs  http_routes.rs  mod.rs  proto.rs  response.rs
wallet_service/src/domain/: entities.rs  error.rs  mod.rs  repository.rs  types.rs
wallet_service/src/infrastructure/persistence/: mod.rs  models.rs  user_repository.rs  wallet_repository.rs
wallet_service/src/use_cases/: create_user.rs  create_wallet.rs  get_user_wallets.rs  get_wallet.rs  mod.rs  process_movement.rs
