[package]
name = "transaction_service"
version = "0.1.0"
edition = "2021"
default-run = "transaction_service"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "rust_decimal", "migrate"] }
tonic = "0.12"
prost = "0.13"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.40.0"
async-trait = "0.1.89"
thiserror = "2.0.18"
serde_json = "1.0.149"
dotenvy = "0.15.7"
utoipa = { version = "5.4.0", features = ["axum_extras", "decimal", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
mockall = "0.14.0"
rstest = "0.26.1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0.0"
