[package]
name = "wallet_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "rust_decimal"] }
tonic = "0.12"
prost = "0.13"
uuid = { version = "1.0", features = ["v4", "serde"] } # Added for domain entities
chrono = { version = "0.4", features = ["serde"] }    # Added for domain entities
async-trait = "0.1.89"
rust_decimal = "1.40.0"
